# AssaultCubeRemastered

./: .gitignore  CMakeLists.txt  README.md  readme.md  server.sh  server_default.sh
bot/: bot_names.txt  bot_teams.txt
cmake/: FindOgg.cmake  FindSDL2_image.cmake  FindVorbis.cmake
config/: admin.cfg  defaults.cfg  docs.cfg  menus.cfg  menus_auth.cfg  menus_bot.cfg  menus_edit.cfg  menus_multiplayer.cfg  menus_settings.cfg  scripts.cfg  serverblacklist.cfg  servercmdline.txt  serverparameters.cfg  servervita.cfg  servervita_bak.cfg
config/autostart/: welcome.cfg
config/opt/: survival.cfg
demos/: 20250130_2118_local_ac_aqueous_0min_DM.dmo  20250130_2121_local_ac_industrial_0min_DM.dmo  20250130_2125_local_ac_africa_0min_DM.dmo  20250130_2126_local_ac_aqueous_0min_DM.dmo  20250130_2128_local_ac_arctic_0min_DM.dmo  20250130_2144_local_ac_avenue_0min_DM.dmo  20250130_2148_local_ac_desert3_0min_DM.dmo  20250130_2154_local_ac_arctic2_0min_DM.dmo
src/: audiomanager.cpp  client.cpp  clientgame.cpp  clients2c.cpp  command.cpp  command.h  console.h  crypto.cpp  crypto_tools.h  cube.h  entities.cpp  entity.h  geom.h  hudgun.h  jpegenc.h  main.cpp  model.h  openal.cpp  platform.h  protocol.cpp  protocol.h  protos.h  rendergl.cpp  renderhud.cpp  rendermodel.cpp  scoreboard.cpp  server.cpp  server.h  serveractions.h  serverchecks.h  serverevents.h  serverfiles.h  sound.h  stream.cpp  tools.h  weapon.cpp  wizard.cpp  world.cpp  world.h  worldio.cpp
src/bot/: ac_bot.cpp  ac_bot.h  ac_bot_ai.cpp  bot.cpp  bot.h  bot_ai.cpp  bot_util.cpp  bot_util.h  bot_waypoint.cpp  bot_waypoint.h  botmanager.cpp
